--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit>=1.32.0
 pandas>=2.1.0
 numpy>=1.26.0
-scikit-learn>=1.2.2
+scikit-learn==1.2.2
 joblib>=1.3.0
 matplotlib>=3.7.0
 seaborn>=0.13.0
+
 
