--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit>=1.32.0
 pandas>=2.1.0
-numpy>=1.26.0
+numpy==1.23.5
 scikit-learn==1.2.2
 joblib>=1.3.0
 matplotlib>=3.7.0
 seaborn>=0.13.0
+
 
 
