--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit>=1.32.0
-pandas>=2.1.0
+streamlit==1.32.0
+pandas==2.0.3
 numpy==1.23.5
 scikit-learn==1.2.2
-joblib>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.13.0
-
+joblib==1.2.0
+matplotlib==3.7.1
+seaborn==0.12.2
+skops==0.11.0
 
 
