--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.32.0
 pandas==2.2.2
-numpy==1.26.4          # ✅ Has pre-built wheel for Python 3.13
-scikit-learn==1.5.2    # ✅ Compatible with numpy 1.26.4
+numpy==1.26.4          
+scikit-learn==1.5.2    
 joblib==1.4.2
 matplotlib==3.8.0
 seaborn==0.13.2
 skops==0.11.0
+
